--- a/juego_geografia.ipynb
+++ b/juego_geografia.ipynb
@@ -34,76 +34,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Cuál es la capital de Castilla-La Mancha?': 'toledo', 'Cuál es el desierto más grande del mundo?': 'la antártida', 'Cuál es el país con más población del mundo?': 'india'}\n",
-      "['Cuál es la capital de Castilla-La Mancha?', 'Cuál es el desierto más grande del mundo?', 'Cuál es el país con más población del mundo?']\n",
-      "Cuál es el desierto más grande del mundo?\n",
-      "El conteo de preguntas va por 1\n",
-      "toledo\n",
-      "La respuesta del usuario es toledo\n"
+      "El diccionario generado es {'Cuál es la capital de Castilla-La Mancha?': 'toledo', 'Cuál es el desierto más grande del mundo?': 'la antártida', 'Cuál es el país con más población del mundo?': 'india'}\n",
+      "La lista generada del dict es: ['Cuál es la capital de Castilla-La Mancha?', 'Cuál es el desierto más grande del mundo?', 'Cuál es el país con más población del mundo?']\n",
+      "pregunta random es Cuál es el desierto más grande del mundo?\n",
+      "Esta es la pregunta número 1\n",
+      "La respuesta del usuario es: patata\n",
+      "La respuesta no es correcta 🙁 Has fallado un total de 1 veces\n",
+      "Pero no pasa, vuelve a intentarlo! 💪\n",
+      "pregunta random es Cuál es la capital de Castilla-La Mancha?\n",
+      "Esta es la pregunta número 2\n",
+      "La respuesta del usuario es: toledo\n",
+      "respuesta_usuario es toledo y preguntas_respuestas[pregunta_random] es toledo\n",
+      "Has acertado! Llevas un total de 1 respuestas correctas\n",
+      "A por la siguiente pregunta!🤓\n",
+      "pregunta random es Cuál es la capital de Castilla-La Mancha?\n",
+      "Esta es la pregunta número 3\n",
+      "La respuesta del usuario es: 85\n",
+      "La respuesta no es correcta 🙁 Has fallado un total de 2 veces\n",
+      "Has fallado 3 veces, el juego ha terminado... 😓\n"
      ]
     }
    ],
    "source": [
-    "#Diccionario con preguntas y respuestas (8 parejas)\n",
-    "# Probamos de momento con 3 preguntas\n",
-    "# PDT poner 5 preguntas más\n",
+    "#Diccionario con preguntas y respuestas (8 parejas) -> PDTE: Añadir todas las preguntas y hacer pruebas, de momento solo 3 \n",
     "\n",
     "# Importar la librería random\n",
     "import random\n",
     "\n",
     "# Crear el diccionario con las preguntas y respuestas\n",
-    "# PDT: Comprobar si afecta el espacio en las respuestas y el acento\n",
+    "# PDTE poner 5 preguntas más\n",
     "preguntas_respuestas = {\n",
     "    \"Cuál es la capital de Castilla-La Mancha?\": \"toledo\",\n",
     "    \"Cuál es el desierto más grande del mundo?\": \"la antártida\",\n",
     "    \"Cuál es el país con más población del mundo?\": \"india\"\n",
     "}\n",
     "\n",
-    "#Mostrar el diccionario\n",
-    "print(preguntas_respuestas)\n",
+    "#PDTE: Borrar este print \n",
+    "print(f\"El diccionario generado es {preguntas_respuestas}\")\n",
     "\n",
-    "# Definir variables de conteo para respuestas realizadas, correctas y falladas\n",
-    "intentos_pregunta = 0\n",
+    "# Definir variables \n",
+    "intentos_pregunta = 0 #Duda: intentos por cada pregunta en concreto o en general? si falla una pregunta, generará una nueva\n",
     "conteo_preguntas = 0\n",
     "respuestas_correctas = 0\n",
     "respuestas_incorrectas = 0\n",
     "\n",
-    "# Para usar el random choice necesitamos una lista.\n",
-    "# Pasamos el dict a lista\n",
+    "# Pasamos el diccionario a lista porque el método random choice se aplica a listas\n",
     "preguntas_respuestas_lista = list(preguntas_respuestas)\n",
-    "print(preguntas_respuestas_lista)\n",
+    "#PDTE: Borrar este print \n",
+    "print(f\"La lista generada del dict es: {preguntas_respuestas_lista}\")\n",
     "\n",
-    "\n",
-    "# PDTE: Ajustar con los valores correctos después de la prueba\n",
-    "# PDTE condiciones del while\n",
-    "while True: #respuestas_correctas == 2 and respuestas_incorrectas != 0: \n",
-    "    # Generamos pregunta random\n",
+    "# Usamos condición While True porque el juego se lanzará hasta que se cumplan las condiciones indicadas\n",
+    "# Cuando las condiciones se cumplan, se parará el juego con un break\n",
+    "while True: \n",
+    "    # Generamos una pregunta aleatoria de la lista\n",
     "    pregunta_random = random.choice(preguntas_respuestas_lista)\n",
-    "    print(pregunta_random)\n",
+    "    #PDTE: Borrar este print \n",
+    "    print(f\"pregunta random es {pregunta_random}\")\n",
     "    \n",
-    "    # Llevamos la cuenta de las preguntas hechas, independientemente de si son correctas o no\n",
+    "    # Llevamos la cuenta de las preguntas hechas, independientemente de si son correctas o no -> #Duda: esto es necesario? se muestra al final?\n",
     "    conteo_preguntas += 1\n",
-    "    print(f\"El conteo de preguntas va por {conteo_preguntas}\")\n",
+    "    print(f\"Esta es la pregunta número {conteo_preguntas}\")\n",
     "    \n",
     "    # Mostramos pregunta al usuario y recogemos respuesta\n",
-    "    respuesta_usuario = (input(f\"Responda la siguiente pregunta {pregunta_random}\")).lower()\n",
-    "    print(f\"La respuesta del usuario es {respuesta_usuario}\")\n",
-    "    \n",
-    "    # Posibles opciones según la respuesta del usuario\n",
-    "    # pregunta_random nos está dando la key del diccionario de la pregunta hecha al usuario \n",
-    "    # Comparar la respuesta del usuario con el value correspondiente a la key del diccionario\n",
-    "    # A través de la key podemos llegar al value\n",
-    "    if respuesta_usuario == preguntas_respuestas.get(pregunta_random):\n",
-    "        print(f\"preguntas_respuestas.get(pregunta_random) da el valor {preguntas_respuestas.get(pregunta_random)}\")\n",
+    "    respuesta_usuario = input(f\"Responda la siguiente pregunta {pregunta_random}\")\n",
+    "    # Protegemos el formato de la respuesta del usuario para que coincida con la respuesta del diccionario\n",
+    "    # Con split eliminamos espacios, con join unificamos en un solo string y con lower lo pasamos todo a minúscula\n",
+    "    # PDTE: proteger los acentos -> para el final, es complejo -> importar libreria unicode\n",
+    "    respuesta_usuario = \"\".join(respuesta_usuario.split()).lower()\n",
+    "    #PDTE: Borrar este print \n",
+    "    print(f\"La respuesta del usuario es: {respuesta_usuario}\")\n",
+    " \n",
+    "    # Comparamos la respuesta del usuario con el value correspondiente a la pregunta (key) del diccionario\n",
+    "    # La variable Pregunta_random recoge la key del diccionario \n",
+    "    # La variable respuesta_usuario recoge el value del diccionario\n",
+    "    # preguntas_respuestas[pregunta_random] nos da el value de la pregunta hecha al usuario -> lo comparamos con la respuesta dada para ver si es correcta\n",
+    "    if respuesta_usuario == preguntas_respuestas[pregunta_random]:\n",
+    "        #PDTE: Borrar este print \n",
+    "        print(f\"respuesta_usuario es {respuesta_usuario} y preguntas_respuestas[pregunta_random] es {preguntas_respuestas[pregunta_random]}\")\n",
     "        respuestas_correctas += 1\n",
-    "    \n",
+    "        print(f\"Has acertado! Llevas un total de {respuestas_correctas} respuestas correctas\")\n",
+    "        #PDTE: Actualizar a respuestas_correctas == 5\n",
+    "        if respuestas_correctas == 2:\n",
+    "            print(f\"Enhorabuena, has ganado el juego! 🎉\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(f\"A por la siguiente pregunta!🤓\")\n",
+    "            # Si adivina una pregunta y el juego sigue, sacar esa pregunta de la lista para que no se repita-> pop \n",
+    "            \n",
+    "    else:\n",
+    "        respuestas_incorrectas += 1\n",
+    "        print(f\"La respuesta no es correcta 🙁 Has fallado un total de {respuestas_incorrectas} veces\")\n",
+    "        #PDTE: Actualizar a respuestas_correctas == 5\n",
+    "        if respuestas_incorrectas == 2:\n",
+    "            print(f\"El juego ha terminado... 😓\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Pero no pasa, vuelve a intentarlo! 💪\")\n",
+    "  \n",
+    "        \n",
     "\n",
     "\n",
     "\n"
