Juego terminado a falta de parte extra, limpieza de print y posible refactorizacion

--- a/juego_geografia.ipynb
+++ b/juego_geografia.ipynb
@@ -34,53 +34,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El diccionario generado es {'Cuál es la capital de Castilla-La Mancha?': 'toledo', 'Cuál es el desierto más grande del mundo?': 'la antártida', 'Cuál es el país con más población del mundo?': 'india'}\n",
-      "La lista generada del dict es: ['Cuál es la capital de Castilla-La Mancha?', 'Cuál es el desierto más grande del mundo?', 'Cuál es el país con más población del mundo?']\n",
-      "pregunta random es Cuál es el desierto más grande del mundo?\n",
+      "El diccionario generado es {'¿Cuál es la capital de Francia?': 'paris', '¿Cuál es el continente más grande?': 'asia', '¿Qué país tiene la mayor población del mundo?': 'india', '¿Cuál es el río más largo del mundo?': 'amazonas', '¿En qué país se encuentra la Torre Eiffel?': 'francia', '¿Cuál es la capital de Japón?': 'tokio', '¿Cuál es el desierto caliente más grande del mundo?': 'sahara', '¿Cuál es la capital de Argentina?': 'buenosaires', '¿Qué país es conocido como la tierra de los canguros?': 'australia'}\n",
+      "La lista generada del dict es: ['¿Cuál es la capital de Francia?', '¿Cuál es el continente más grande?', '¿Qué país tiene la mayor población del mundo?', '¿Cuál es el río más largo del mundo?', '¿En qué país se encuentra la Torre Eiffel?', '¿Cuál es la capital de Japón?', '¿Cuál es el desierto caliente más grande del mundo?', '¿Cuál es la capital de Argentina?', '¿Qué país es conocido como la tierra de los canguros?']\n",
+      "pregunta random es ¿Cuál es la capital de Argentina?\n",
       "Esta es la pregunta número 1\n",
-      "La respuesta del usuario es: patata\n",
-      "La respuesta no es correcta 🙁 Has fallado un total de 1 veces\n",
-      "Pero no pasa, vuelve a intentarlo! 💪\n",
-      "pregunta random es Cuál es la capital de Castilla-La Mancha?\n",
-      "Esta es la pregunta número 2\n",
-      "La respuesta del usuario es: toledo\n",
-      "respuesta_usuario es toledo y preguntas_respuestas[pregunta_random] es toledo\n",
+      "La respuesta del usuario es: buenosaires\n",
+      "respuesta_usuario es buenosaires y preguntas_respuestas[pregunta_random] es buenosaires\n",
       "Has acertado! Llevas un total de 1 respuestas correctas\n",
       "A por la siguiente pregunta!🤓\n",
-      "pregunta random es Cuál es la capital de Castilla-La Mancha?\n",
+      "La lista de posibles preguntas ANTES de actualizarse es: ['¿Cuál es la capital de Francia?', '¿Cuál es el continente más grande?', '¿Qué país tiene la mayor población del mundo?', '¿Cuál es el río más largo del mundo?', '¿En qué país se encuentra la Torre Eiffel?', '¿Cuál es la capital de Japón?', '¿Cuál es el desierto caliente más grande del mundo?', '¿Cuál es la capital de Argentina?', '¿Qué país es conocido como la tierra de los canguros?']\n",
+      "La pregunta a borrar es: ¿Cuál es la capital de Argentina?\n",
+      "La lista de posibles preguntas DESPUES de actualizarse es: ['¿Cuál es la capital de Francia?', '¿Cuál es el continente más grande?', '¿Qué país tiene la mayor población del mundo?', '¿Cuál es el río más largo del mundo?', '¿En qué país se encuentra la Torre Eiffel?', '¿Cuál es la capital de Japón?', '¿Cuál es el desierto caliente más grande del mundo?', '¿Qué país es conocido como la tierra de los canguros?']\n",
+      "pregunta random es ¿Qué país es conocido como la tierra de los canguros?\n",
+      "Esta es la pregunta número 2\n",
+      "La respuesta del usuario es: australia\n",
+      "respuesta_usuario es australia y preguntas_respuestas[pregunta_random] es australia\n",
+      "Has acertado! Llevas un total de 2 respuestas correctas\n",
+      "A por la siguiente pregunta!🤓\n",
+      "La lista de posibles preguntas ANTES de actualizarse es: ['¿Cuál es la capital de Francia?', '¿Cuál es el continente más grande?', '¿Qué país tiene la mayor población del mundo?', '¿Cuál es el río más largo del mundo?', '¿En qué país se encuentra la Torre Eiffel?', '¿Cuál es la capital de Japón?', '¿Cuál es el desierto caliente más grande del mundo?', '¿Qué país es conocido como la tierra de los canguros?']\n",
+      "La pregunta a borrar es: ¿Qué país es conocido como la tierra de los canguros?\n",
+      "La lista de posibles preguntas DESPUES de actualizarse es: ['¿Cuál es la capital de Francia?', '¿Cuál es el continente más grande?', '¿Qué país tiene la mayor población del mundo?', '¿Cuál es el río más largo del mundo?', '¿En qué país se encuentra la Torre Eiffel?', '¿Cuál es la capital de Japón?', '¿Cuál es el desierto caliente más grande del mundo?']\n",
+      "pregunta random es ¿Cuál es el río más largo del mundo?\n",
       "Esta es la pregunta número 3\n",
-      "La respuesta del usuario es: 85\n",
+      "La respuesta del usuario es: amazonas\n",
+      "respuesta_usuario es amazonas y preguntas_respuestas[pregunta_random] es amazonas\n",
+      "Has acertado! Llevas un total de 3 respuestas correctas\n",
+      "A por la siguiente pregunta!🤓\n",
+      "La lista de posibles preguntas ANTES de actualizarse es: ['¿Cuál es la capital de Francia?', '¿Cuál es el continente más grande?', '¿Qué país tiene la mayor población del mundo?', '¿Cuál es el río más largo del mundo?', '¿En qué país se encuentra la Torre Eiffel?', '¿Cuál es la capital de Japón?', '¿Cuál es el desierto caliente más grande del mundo?']\n",
+      "La pregunta a borrar es: ¿Cuál es el río más largo del mundo?\n",
+      "La lista de posibles preguntas DESPUES de actualizarse es: ['¿Cuál es la capital de Francia?', '¿Cuál es el continente más grande?', '¿Qué país tiene la mayor población del mundo?', '¿En qué país se encuentra la Torre Eiffel?', '¿Cuál es la capital de Japón?', '¿Cuál es el desierto caliente más grande del mundo?']\n",
+      "pregunta random es ¿Cuál es la capital de Japón?\n",
+      "Esta es la pregunta número 4\n",
+      "La respuesta del usuario es: tokio\n",
+      "respuesta_usuario es tokio y preguntas_respuestas[pregunta_random] es tokio\n",
+      "Has acertado! Llevas un total de 4 respuestas correctas\n",
+      "A por la siguiente pregunta!🤓\n",
+      "La lista de posibles preguntas ANTES de actualizarse es: ['¿Cuál es la capital de Francia?', '¿Cuál es el continente más grande?', '¿Qué país tiene la mayor población del mundo?', '¿En qué país se encuentra la Torre Eiffel?', '¿Cuál es la capital de Japón?', '¿Cuál es el desierto caliente más grande del mundo?']\n",
+      "La pregunta a borrar es: ¿Cuál es la capital de Japón?\n",
+      "La lista de posibles preguntas DESPUES de actualizarse es: ['¿Cuál es la capital de Francia?', '¿Cuál es el continente más grande?', '¿Qué país tiene la mayor población del mundo?', '¿En qué país se encuentra la Torre Eiffel?', '¿Cuál es el desierto caliente más grande del mundo?']\n",
+      "pregunta random es ¿Qué país tiene la mayor población del mundo?\n",
+      "Esta es la pregunta número 5\n",
+      "La respuesta del usuario es: ffdss\n",
+      "La respuesta no es correcta 🙁 Has fallado un total de 1 veces\n",
+      "Pero no pasa, vuelve a intentarlo! 💪\n",
+      "pregunta random es ¿Qué país tiene la mayor población del mundo?\n",
+      "Esta es la pregunta número 6\n",
+      "La respuesta del usuario es: dfg\n",
       "La respuesta no es correcta 🙁 Has fallado un total de 2 veces\n",
-      "Has fallado 3 veces, el juego ha terminado... 😓\n"
+      "Pero no pasa, vuelve a intentarlo! 💪\n",
+      "pregunta random es ¿En qué país se encuentra la Torre Eiffel?\n",
+      "Esta es la pregunta número 7\n",
+      "La respuesta del usuario es: francia\n",
+      "respuesta_usuario es francia y preguntas_respuestas[pregunta_random] es francia\n",
+      "Has acertado! Llevas un total de 5 respuestas correctas\n",
+      "Enhorabuena, has ganado el juego! 🎉\n"
      ]
     }
    ],
    "source": [
-    "#Diccionario con preguntas y respuestas (8 parejas) -> PDTE: Añadir todas las preguntas y hacer pruebas, de momento solo 3 \n",
+    "#Diccionario con preguntas y respuestas (8 preguntas) #DUDA: condiciones ok? 8 preguntas, 5 respuestas, 3 fallos\n",
     "\n",
     "# Importar la librería random\n",
     "import random\n",
     "\n",
     "# Crear el diccionario con las preguntas y respuestas\n",
-    "# PDTE poner 5 preguntas más\n",
+    "\n",
+    "preguntas_respuestas = {\n",
+    "    '¿Cuál es la capital de Francia?': 'paris',\n",
+    "    '¿Cuál es el continente más grande?': 'asia',\n",
+    "    '¿Qué país tiene la mayor población del mundo?': 'india',\n",
+    "    '¿Cuál es el río más largo del mundo?': 'amazonas',\n",
+    "    '¿En qué país se encuentra la Torre Eiffel?': 'francia',\n",
+    "    '¿Cuál es la capital de Japón?': 'tokio',\n",
+    "    '¿Cuál es el desierto caliente más grande del mundo?': 'sahara',\n",
+    "    '¿Cuál es la capital de Argentina?': 'buenosaires',\n",
+    "    '¿Qué país es conocido como la tierra de los canguros?': 'australia'\n",
+    "}\n",
+    "\n",
+    "#PDTE: Borrar este dicc después de las pruebas\n",
+    "\"\"\"\n",
     "preguntas_respuestas = {\n",
     "    \"Cuál es la capital de Castilla-La Mancha?\": \"toledo\",\n",
-    "    \"Cuál es el desierto más grande del mundo?\": \"la antártida\",\n",
+    "    \"Cuál es el desierto más grande del mundo?\": \"laantartida\",\n",
     "    \"Cuál es el país con más población del mundo?\": \"india\"\n",
     "}\n",
+    "\"\"\"\n",
     "\n",
     "#PDTE: Borrar este print \n",
     "print(f\"El diccionario generado es {preguntas_respuestas}\")\n",
     "\n",
     "# Definir variables \n",
-    "intentos_pregunta = 0 #Duda: intentos por cada pregunta en concreto o en general? si falla una pregunta, generará una nueva\n",
+    "intentos_pregunta = 0 #PDTE: Como extra: tenemos posibilidad de fallar 3 veces pero solo suma 1 fallo si llego al intento nº3 por pregunta\n",
     "conteo_preguntas = 0\n",
     "respuestas_correctas = 0\n",
     "respuestas_incorrectas = 0\n",
@@ -98,7 +149,7 @@
     "    #PDTE: Borrar este print \n",
     "    print(f\"pregunta random es {pregunta_random}\")\n",
     "    \n",
-    "    # Llevamos la cuenta de las preguntas hechas, independientemente de si son correctas o no -> #Duda: esto es necesario? se muestra al final?\n",
+    "    # Llevamos la cuenta de las preguntas hechas, independientemente de si son correctas o no \n",
     "    conteo_preguntas += 1\n",
     "    print(f\"Esta es la pregunta número {conteo_preguntas}\")\n",
     "    \n",
@@ -121,22 +172,32 @@
     "        respuestas_correctas += 1\n",
     "        print(f\"Has acertado! Llevas un total de {respuestas_correctas} respuestas correctas\")\n",
     "        #PDTE: Actualizar a respuestas_correctas == 5\n",
-    "        if respuestas_correctas == 2:\n",
+    "        if respuestas_correctas == 5:\n",
+    "            # PDTE: Se puede cambiar print y break por un return\n",
     "            print(f\"Enhorabuena, has ganado el juego! 🎉\")\n",
     "            break\n",
     "        else:\n",
     "            print(f\"A por la siguiente pregunta!🤓\")\n",
-    "            # Si adivina una pregunta y el juego sigue, sacar esa pregunta de la lista para que no se repita-> pop \n",
-    "            \n",
+    "            # Si adivina una pregunta y el juego sigue, sacar esa pregunta de la lista para que no se repita\n",
+    "            # Usaré remove para eliminar la pregunta de la lista porque remove elimina la primera aparición del valor concreto y en este caso solo aparece una vez\n",
+    "            # Podemos usar Pregunta_random que es cada uno de los elementos de la lista \"preguntas_respuestas_lista\" que es de donde salen las preguntas que lanza la máquina\n",
+    "            # PDTE: Borrar estos print\n",
+    "            print(f\"La lista de posibles preguntas ANTES de actualizarse es: {preguntas_respuestas_lista}\")\n",
+    "            preguntas_respuestas_lista.remove(pregunta_random)\n",
+    "            # PDTE: Borrar estos print\n",
+    "            print(f\"La pregunta a borrar es: {pregunta_random}\")\n",
+    "            # PDTE: Borrar estos print\n",
+    "            print(f\"La lista de posibles preguntas DESPUES de actualizarse es: {preguntas_respuestas_lista}\")\n",
     "    else:\n",
     "        respuestas_incorrectas += 1\n",
     "        print(f\"La respuesta no es correcta 🙁 Has fallado un total de {respuestas_incorrectas} veces\")\n",
     "        #PDTE: Actualizar a respuestas_correctas == 5\n",
-    "        if respuestas_incorrectas == 2:\n",
+    "        if respuestas_incorrectas == 3:\n",
     "            print(f\"El juego ha terminado... 😓\")\n",
     "            break\n",
     "        else:\n",
-    "            print(\"Pero no pasa, vuelve a intentarlo! 💪\")\n",
+    "            print(\"Pero no pasa, vuelve a intentarlo! 💪\") # PDTE: Extra: tiene que volver a lanzar la misma pregunta si falla, darle 3 intentos, si falla los 3, le lanzas otra pregunta y le quitas 1 vida\n",
+    "                                                            # Duda: si fallo 3 veces la misma pregunta la elimino como posible pregunta a futuro?\n",
     "  \n",
     "        \n",
     "\n",
