--- a/PPT.ipynb
+++ b/PPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,34 +38,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tu respuesta: papel\n",
-      "Respuesta ordenador: piedra\n",
+      "Tu respuesta: piedra\n",
+      "Respuesta ordenador: tijera\n",
       "Has ganado esta ronda\n",
       "Marcador: usuario: 1 - ordenador: 0\n",
       "---------------------------------\n",
-      "Tu respuesta: tijera\n",
-      "Respuesta ordenador: piedra\n",
+      "Tu respuesta: papel\n",
+      "Respuesta ordenador: tijera\n",
       "Has perdido esta ronda\n",
       "Marcador: usuario: 1 - ordenador: 1\n",
       "---------------------------------\n",
       "Tu respuesta: tijera\n",
-      "Respuesta ordenador: piedra\n",
-      "Has perdido esta ronda\n",
-      "Marcador: usuario: 1 - ordenador: 2\n",
+      "Respuesta ordenador: tijera\n",
+      "Empate\n",
+      "Marcador: usuario: 1 - ordenador: 1\n",
       "---------------------------------\n",
-      "Tu respuesta: tijera\n",
-      "Respuesta ordenador: piedra\n",
-      "Has perdido esta ronda\n",
-      "Marcador: usuario: 1 - ordenador: 3\n",
+      "Tu respuesta: piedra\n",
+      "Respuesta ordenador: tijera\n",
+      "Has ganado esta ronda\n",
+      "Marcador: usuario: 2 - ordenador: 1\n",
       "---------------------------------\n",
-      "Has perdido 😞\n"
+      "Tu respuesta: piedra\n",
+      "Respuesta ordenador: tijera\n",
+      "Has ganado esta ronda\n",
+      "Marcador: usuario: 3 - ordenador: 1\n",
+      "---------------------------------\n",
+      "¡Felicitaciones! Has ganado! 🎉\n"
      ]
     }
    ],
@@ -88,9 +93,9 @@
     "    if respuesta_usuario not in opciones:\n",
     "        print('Introduce una de las opciones')\n",
     "\n",
-    "        respuesta_usuario = input('Escoge una opción: piedra, papel o tijera')  \n",
+    "        respuesta_usuario = input('Escoge una opción válida: piedra, papel o tijera')  \n",
     "\n",
-    "    if respuesta_usuario == respuesta_ordenador: \n",
+    "    elif respuesta_usuario == respuesta_ordenador: \n",
     "        \n",
     "        print(f'Tu respuesta: {respuesta_usuario}')\n",
     "        print(f'Respuesta ordenador: {respuesta_ordenador}')\n",
@@ -106,6 +111,9 @@
     "        print(f'Marcador: usuario: {puntos_usuario} - ordenador: {puntos_ordenador}')\n",
     "        print('---------------------------------')\n",
     "        \n",
+    "        if puntos_ordenador == obj_puntos:\n",
+    "            print('Has perdido 😞')\n",
+    "            break\n",
     "    elif respuesta_usuario == 'piedra' and respuesta_ordenador == 'tijera' or respuesta_usuario == 'papel' and respuesta_ordenador == 'piedra' or respuesta_usuario == 'tijera' and respuesta_ordenador == 'papel':\n",
     "        puntos_usuario += 1\n",
     "        print(f'Tu respuesta: {respuesta_usuario}')\n",
@@ -113,13 +121,12 @@
     "        print('Has ganado esta ronda')\n",
     "        print(f'Marcador: usuario: {puntos_usuario} - ordenador: {puntos_ordenador}')\n",
     "        print('---------------------------------')\n",
+    "        \n",
+    "        if puntos_usuario == obj_puntos: \n",
+    "            print('¡Felicitaciones! Has ganado! 🎉')\n",
+    "            break\n",
     "    \n",
-    "    if puntos_ordenador == obj_puntos: \n",
-    "        print('Has perdido 😞')\n",
-    "        break\n",
-    "    elif puntos_usuario == obj_puntos: \n",
-    "        print('¡Felicitaciones! Has ganado! 🎉')\n",
-    "        break\n",
+    "    \n",
     " "
    ]
   }
@@ -140,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
