Ahorcado con comentarios revisado

--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -332,84 +332,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "oro\n",
-      "La palabra oculta con espacio es:  _  _  _ \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "o\n",
-      "La palabra oculta SIN espacios es: ___\n",
-      "Palabra oculta str: o_o\n",
-      "r\n",
-      "La palabra oculta SIN espacios es: o_o\n",
-      "Palabra oculta str: oro\n",
-      "Felicidades, has adivinado la palabra oculta oro 🎉\n"
+      "Palabra oculta:  _  _  _  _  _ \n",
+      "La letra indicada es c\n",
+      "Palabra oculta es: c _ c _ _\n",
+      "La letra indicada es o\n",
+      "Palabra oculta es: c o c _ _\n",
+      "La letra indicada es q\n",
+      "La letra q no está en la palabra secreta 🙁. Te quedan 5 vidas\n",
+      "La letra indicada es q\n",
+      "La letra q no está en la palabra secreta 🙁. Te quedan 4 vidas\n",
+      "La letra indicada es q\n",
+      "La letra q no está en la palabra secreta 🙁. Te quedan 3 vidas\n",
+      "La letra indicada es q\n",
+      "La letra q no está en la palabra secreta 🙁. Te quedan 2 vidas\n",
+      "La letra indicada es q\n",
+      "La letra q no está en la palabra secreta 🙁. Te quedan 1 vidas\n",
+      "La letra indicada es q\n",
+      "La letra q no está en la palabra secreta 🙁. Te quedan 0 vidas\n",
+      "Has agotado todas tus vidas, el juego ha terminado 💀. La palabra secreta era coche\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "#inicio ahorcado \n",
-    "import random\n",
-    "#crear lista de palabras secretas\n",
-    "palabras_secretas = [\"oro\"]\n",
-    "\n",
-    "#random para que el ordenador elija una palabra\n",
-    "palabra_secreta_aleatoria = random.choice(palabras_secretas)\n",
-    "print(palabra_secreta_aleatoria)\n",
-    "\n",
-    "#contador de vidas restantes (por cada parte del cuerpo)\n",
+    "import random \n",
+    "# creamos lista de palabras secretas\n",
+    "palabras_secretas = [\"oro\", \"jupiter\", \"coche\"] \n",
+    "# Random choice para que el ordenador elija una palabra de manera aleatoria\n",
+    "palabra_secreta_aleatoria = random.choice(palabras_secretas) \n",
+    "# Contador de vidas restantes (por cada parte del cuerpo)\n",
     "vidas_usuario = 6\n",
-    "\n",
-    "#cambiar palabra por guiones bajos\n",
+    "# Encriptamos la palabra secreta con \"_\"\n",
     "palabra_oculta = \" _ \" * len(palabra_secreta_aleatoria) # Dejamos espacios con el guión para que se vea el número de letras que tiene la palabra\n",
-    "print(f'La palabra oculta con espacio es: {palabra_oculta}')\n",
+    "print(f\"Palabra oculta: {palabra_oculta}\")\n",
     "\n",
-    "#bucle se para cuando ya haya adivinado (en caso que no haya mas guiones bajos) o cuando las vidas del usuario se hayan agotado: \n",
-    "#while \" _ \" in palabra_oculta or vidas_usuario > 0: #PDTE: Probar con while True\n",
     "while True:\n",
-    "    #imprimir letra usuario: \n",
+    "    # Recogemos la letra del usuario\n",
     "    letra_usuario = input(f\"Indica una letra de la {palabra_oculta}\").lower()\n",
-    "    print(letra_usuario)\n",
-    "    \n",
-    "    #añadimos for en caso de que haya letras repetidas\n",
-    "    #for letra in palabra_secreta_aleatoria: \n",
-    "    if letra_usuario in palabra_secreta_aleatoria: \n",
-    "        #Necesito sustituir el _ en palabra oculta por la letra del usuario en la posición que ocupa esa letra en la palabra secreta\n",
-    "        # Creamos lista de la palabra oculta y palabra_secreta_aleatoria para cambiar las letras que adivine el usuario mediente el índice de ambas listas\n",
-    "        palabra_oculta = palabra_oculta.replace(\" \",\"\") # Eliminamos el espacio del str de la palabra oculta para que no los incluya en la lista\n",
-    "        print(f'La palabra oculta SIN espacios es: {palabra_oculta}')\n",
-    "        palabra_oculta_lista = list(palabra_oculta)  \n",
-    "        palabra_secreta_aleatoria_lista = list(palabra_secreta_aleatoria) \n",
-    "        \n",
-    "        for i in range(len(palabra_secreta_aleatoria_lista)): # nos generamos un range con la longitud de la lista de la palabra secreta\n",
-    "            if palabra_secreta_aleatoria_lista[i] == letra_usuario: #en vez de iterar por los elementos de la lista, como lo anterior genero un indice, ahora accedemos a cada elemnto de la lista por su indice. \n",
-    "                palabra_oculta_lista[i] = letra_usuario #le hacemos una asignación directa (este codigo solo se ejecuta cuando aparezca el 'hola'). \n",
-    "        \n",
-    "         # Paso la palabra oculta a string para mostrarla al usuario -> join y no usamos nada como delimitador, porque quiero una cadena de texto\n",
-    "        palabra_oculta = \"\".join(palabra_oculta_lista)\n",
-    "        print(f\"Palabra oculta str: {palabra_oculta}\")\n",
-    "        \n",
-    "        if \"_\" not in palabra_oculta:\n",
-    "            print(f\"Felicidades, has adivinado la palabra oculta {palabra_oculta} 🎉\")\n",
-    "            break\n",
-    "        \n",
+    "    print(f\"La letra indicada es {letra_usuario}\")\n",
+    "    # Protegemos que indique solo 1 letra\n",
+    "    if len(letra_usuario) > 1:\n",
+    "        print(f\"Debe ingresar solo 1 letra\")\n",
     "    else:\n",
-    "        vidas_usuario -= 1\n",
-    "        print(f\"La letra {letra_usuario} no está en la palabra secreta 🙁. Te quedan {vidas_usuario} vidas\")\n",
-    "        if vidas_usuario == 0:\n",
-    "            print(f\"Has agotado todas tus vidas, el juego ha terminado 💀\")\n",
-    "            break\n"
+    "        if letra_usuario in palabra_secreta_aleatoria: \n",
+    "            # Creamos lista de la palabra oculta y palabra_secreta_aleatoria para cambiar las letras que adivine el usuario mediente el índice de ambas listas\n",
+    "            palabra_oculta = palabra_oculta.replace(\" \",\"\") # Eliminamos el espacio del string de la palabra oculta para que no los incluya en la lista -> incluimos espacios para que se viera mejor el númeror de guiones \n",
+    "            palabra_oculta_lista = list(palabra_oculta)  \n",
+    "            palabra_secreta_aleatoria_lista = list(palabra_secreta_aleatoria) \n",
+    "            # Generamos un bucle for que iterará por los índices del rango de la palabra secreta -> i = 0, i = 1 ... así hasta el len de palabra_secreta_aleatoria_lista\n",
+    "            for i in range(len(palabra_secreta_aleatoria_lista)): \n",
+    "                # Obtenemos el índice donde está la letra del usuario dentro de la palabra secreta\n",
+    "                if palabra_secreta_aleatoria_lista[i] == letra_usuario: \n",
+    "                    # Sustituimos la letra del usuario en la palabra en la posición del índice obtenido\n",
+    "                    palabra_oculta_lista[i] = letra_usuario \n",
+    "            # Paso la palabra oculta lista a string para mostrarla al usuario -> join y usamos como delimitador \" \", porque quiero una cadena de texto con separación entre los guiones\n",
+    "            palabra_oculta = \" \".join(palabra_oculta_lista)\n",
+    "            print(f\"Palabra oculta es: {palabra_oculta}\")\n",
+    "            if \"_\" not in palabra_oculta:\n",
+    "                print(f\"Felicidades, has adivinado la palabra oculta {palabra_oculta} 🎉\")\n",
+    "                break\n",
+    "        else:\n",
+    "            vidas_usuario -= 1\n",
+    "            print(f\"La letra {letra_usuario} no está en la palabra secreta 🙁. Te quedan {vidas_usuario} vidas\")\n",
+    "            if vidas_usuario == 0:\n",
+    "                print(f\"Has agotado todas tus vidas, el juego ha terminado 💀. La palabra secreta era {palabra_secreta_aleatoria}\")\n",
+    "                break\n"
    ]
   }
  ],
