--- a/ahorcado_muñeco.ipynb
+++ b/ahorcado_muñeco.ipynb
@@ -2,42 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Testeado cuando NO se repiten letras dentro de la palabra\n",
-    "# Definición de variables\n",
-    "palabra_secreta = \"sec\" #hacer esto con random choice (lista palabras)\n",
-    "vidas_usuario = 2 \n",
-    "# Necesitamos una palabra formada con * con el mismo número de letras que la palabra secreta\n",
-    "palabra_oculta = '_' * len(palabra_secreta)\n",
-    "print(\"La palabra tiene\", len(palabra_secreta), \"letras.\")\n",
-    "# Las condiciones para permanecer en el bucle es que la palabra oculta aún tenga * y que el usuario tenga más de 0 vidas. Si una sola no se cumple, salimos del bucle\n",
-    "while \"_\" in palabra_oculta and vidas_usuario > 0:\n",
-    "    letra_usuario = input(f\"Indica una letra de la {palabra_oculta}\")\n",
-    "    print(letra_usuario)\n",
-    "    if letra_usuario in palabra_secreta:\n",
-    "        #Necesito sustituir el * en palabra oculta por la letra del usuario en la posición que ocupa esa letra en la palabra secreta\n",
-    "        posicion_letra = palabra_secreta.find(letra_usuario.lower()) # Protejo la posibilidad de que el usuario utilice Mayus\n",
-    "        print(f\"Posicion letra es {posicion_letra}\")\n",
-    "       # Pasar palabra oculta a lista, sustituir el valor del usuario en la posicion que corresponde (por el indice), volver a convertirlo en un string y mostrarlo\n",
-    "        palabra_oculta_lista = list(palabra_oculta)\n",
-    "        print(f\"la lista de palabra oculta es {palabra_oculta_lista}\")\n",
-    "        # Añado la letra del usuario en la posición donde corresponde\n",
-    "        palabra_oculta_lista[posicion_letra] = letra_usuario\n",
-    "        print(f\"la lista de palabra oculta tras añadir la letra del usuario es {palabra_oculta_lista}\")\n",
-    "        # Paso la palabra oculta a string para mostrarla al usuario -> join y no usamos nada como delimitador, porque quiero una cadena de texto\n",
-    "        palabra_oculta = \"\".join(palabra_oculta_lista)\n",
-    "        print(f\"La palabra oculta es {palabra_oculta}\")\n",
-    "    else:\n",
-    "        vidas_usuario -= 1\n",
-    "        print(f\"Has fallado, vuelve a intentarlo. Te queda {vidas_usuario} vidas\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -206,9 +171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/tmp/ipykernel_18688/168730147.py:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  e = '''\n"
+     ]
+    }
+   ],
    "source": [
     "e = '''\n",
     "      +---+\n",
@@ -223,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -248,9 +224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/tmp/ipykernel_18688/3613663732.py:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  f = '''\n"
+     ]
+    }
+   ],
    "source": [
     "f = '''\n",
     "      +---+\n",
@@ -292,7 +279,18 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/tmp/ipykernel_18688/3488292933.py:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  g = '''\n"
+     ]
+    }
+   ],
    "source": [
     "g = '''\n",
     "      +---+\n",
@@ -368,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +384,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -410,23 +408,20 @@
      "output_type": "stream",
      "text": [
       "jupiter\n",
-      "La palabra es:  _  _  _  _  _  _  _ \n",
-      "c\n",
-      "c\n",
-      "o\n",
-      "h\n",
-      "e\n"
+      "La palabra es:  _  _  _  _  _  _  _ \n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 32\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m#contar si se repite la letra \u001b[39;00m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m lista_palabra_oculta:\n\u001b[1;32m---> 32\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mlista_palabra_oculta\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m==\u001b[39m letra_usuario: \n\u001b[0;32m     33\u001b[0m         lista_palabra_oculta[i] \u001b[38;5;241m=\u001b[39m letra_usuario  \n\u001b[0;32m     35\u001b[0m \u001b[38;5;66;03m#Necesito sustituir el \" _ \" en palabra oculta por la letra del usuario en la posición que ocupa esa letra en la palabra secreta\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[39], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m#bucle se para cuando ya haya adivinado (en caso que no haya mas guiones bajos) o cuando las vidas del usuario se hayan agotado: \u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m _ \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m palabra_oculta \u001b[38;5;129;01mor\u001b[39;00m vidas_usuario \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;66;03m#imprimir letra usuario: \u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m     letra_usuario \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIndica una letra de la \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpalabra_oculta\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mlower()\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28mprint\u001b[39m(letra_usuario)\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;66;03m#añadimos for en caso de que haya letras repetidas\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/ipykernel/kernelbase.py:1262\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1260\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1261\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[0;32m-> 1262\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_input_request(\n\u001b[1;32m   1263\u001b[0m     \u001b[38;5;28mstr\u001b[39m(prompt),\n\u001b[1;32m   1264\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent_ident[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m   1265\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_parent(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[1;32m   1266\u001b[0m     password\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m   1267\u001b[0m )\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/ipykernel/kernelbase.py:1305\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1302\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1303\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m   1304\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 1305\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1306\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m   1307\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
