--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -171,20 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "/tmp/ipykernel_9218/168730147.py:1: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "  e = '''\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "e = '''\n",
     "      +---+\n",
@@ -199,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -224,20 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "/tmp/ipykernel_9218/3613663732.py:1: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "  f = '''\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = '''\n",
     "      +---+\n",
@@ -252,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -277,20 +255,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "/tmp/ipykernel_9218/3488292933.py:1: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "  g = '''\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "g = '''\n",
     "      +---+\n",
@@ -306,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -332,31 +299,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Palabra oculta:  _  _  _  _  _ \n",
-      "La letra indicada es c\n",
-      "Palabra oculta es: c _ c _ _\n",
-      "La letra indicada es o\n",
-      "Palabra oculta es: c o c _ _\n",
-      "La letra indicada es q\n",
-      "La letra q no está en la palabra secreta 🙁. Te quedan 5 vidas\n",
-      "La letra indicada es q\n",
-      "La letra q no está en la palabra secreta 🙁. Te quedan 4 vidas\n",
-      "La letra indicada es q\n",
-      "La letra q no está en la palabra secreta 🙁. Te quedan 3 vidas\n",
-      "La letra indicada es q\n",
-      "La letra q no está en la palabra secreta 🙁. Te quedan 2 vidas\n",
-      "La letra indicada es q\n",
-      "La letra q no está en la palabra secreta 🙁. Te quedan 1 vidas\n",
-      "La letra indicada es q\n",
-      "La letra q no está en la palabra secreta 🙁. Te quedan 0 vidas\n",
-      "Has agotado todas tus vidas, el juego ha terminado 💀. La palabra secreta era coche\n"
+      "Palabra oculta:  _  _  _  _  _  _  _ \n",
+      "La letra indicada es j\n",
+      "Palabra oculta es: j _ _ _ _ _ _\n",
+      "La letra indicada es 5\n",
+      "La letra 5 no está en la palabra secreta 🙁. Te quedan 5 vidas\n",
+      "La letra indicada es i\n",
+      "Palabra oculta es: j _ _ i _ _ _\n",
+      "La letra indicada es t\n",
+      "Palabra oculta es: j _ _ i t _ _\n",
+      "La letra indicada es e\n",
+      "Palabra oculta es: j _ _ i t e _\n",
+      "La letra indicada es r\n",
+      "Palabra oculta es: j _ _ i t e r\n",
+      "La letra indicada es uu\n",
+      "Debe ingresar solo 1 letra\n",
+      "La letra indicada es p\n",
+      "Palabra oculta es: j _ p i t e r\n",
+      "La letra indicada es i\n",
+      "Palabra oculta es: j _ p i t e r\n",
+      "La letra indicada es u\n",
+      "Palabra oculta es: j u p i t e r\n",
+      "Felicidades, has adivinado la palabra oculta j u p i t e r 🎉\n"
      ]
     }
    ],
@@ -404,11 +375,93 @@
     "                print(f\"Has agotado todas tus vidas, el juego ha terminado 💀. La palabra secreta era {palabra_secreta_aleatoria}\")\n",
     "                break\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Palabra oculta:  _  _  _ \n",
+      "La letra indicada es 55\n",
+      "Debe ingresar una letra, no un número u otro carácter.\n",
+      "La letra indicada es 4\n",
+      "Debe ingresar una letra, no un número u otro carácter.\n",
+      "La letra indicada es *\n",
+      "Debe ingresar una letra, no un número u otro carácter.\n",
+      "La letra indicada es *\n",
+      "Debe ingresar una letra, no un número u otro carácter.\n",
+      "La letra indicada es j\n",
+      "La letra j no está en la palabra secreta 🙁. Te quedan 5 vidas\n",
+      "La letra indicada es o\n",
+      "Palabra oculta es: o _ o\n",
+      "La letra indicada es r\n",
+      "Palabra oculta es: o r o\n",
+      "Felicidades, has adivinado la palabra oculta o r o 🎉\n"
+     ]
+    }
+   ],
+   "source": [
+    "### QA \n",
+    "\n",
+    "import random \n",
+    "# creamos lista de palabras secretas\n",
+    "palabras_secretas = [\"oro\", \"jupiter\", \"coche\"] \n",
+    "# Random choice para que el ordenador elija una palabra de manera aleatoria\n",
+    "palabra_secreta_aleatoria = random.choice(palabras_secretas) \n",
+    "# Contador de vidas restantes (por cada parte del cuerpo)\n",
+    "vidas_usuario = 6\n",
+    "# Encriptamos la palabra secreta con \"_\"\n",
+    "palabra_oculta = \" _ \" * len(palabra_secreta_aleatoria) # Dejamos espacios con el guión para que se vea el número de letras que tiene la palabra\n",
+    "print(f\"Palabra oculta: {palabra_oculta}\")\n",
+    "\n",
+    "while True:\n",
+    "    # Recogemos la letra del usuario\n",
+    "    letra_usuario = input(f\"Indica una letra de la palabra oculta: {palabra_oculta}\").lower()\n",
+    "    print(f\"La letra indicada es {letra_usuario}\")\n",
+    "\n",
+    "   # Verificar si el usuario ingresó un número o un carácter que no sea una letra\n",
+    "    if not letra_usuario.isalpha():\n",
+    "        print(\"Debe ingresar una letra, no un número u otro carácter.\")\n",
+    "        continue  # Reinicia para que vuelva a intentar\n",
+    "    # Protegemos que indique solo 1 letra\n",
+    "    if len(letra_usuario) > 1:\n",
+    "        print(f\"Debe ingresar solo 1 letra\")\n",
+    "        continue  # Reinicia para que el vuelva a intentar\n",
+    "\n",
+    "    else:\n",
+    "        if letra_usuario in palabra_secreta_aleatoria: \n",
+    "            # Creamos lista de la palabra oculta y palabra_secreta_aleatoria para cambiar las letras que adivine el usuario mediente el índice de ambas listas\n",
+    "            palabra_oculta = palabra_oculta.replace(\" \",\"\") # Eliminamos el espacio del string de la palabra oculta para que no los incluya en la lista -> incluimos espacios para que se viera mejor el númeror de guiones \n",
+    "            palabra_oculta_lista = list(palabra_oculta)  \n",
+    "            palabra_secreta_aleatoria_lista = list(palabra_secreta_aleatoria) \n",
+    "            # Generamos un bucle for que iterará por los índices del rango de la palabra secreta -> i = 0, i = 1 ... así hasta el len de palabra_secreta_aleatoria_lista\n",
+    "            for i in range(len(palabra_secreta_aleatoria_lista)): \n",
+    "                # Obtenemos el índice donde está la letra del usuario dentro de la palabra secreta\n",
+    "                if palabra_secreta_aleatoria_lista[i] == letra_usuario: \n",
+    "                    # Sustituimos la letra del usuario en la palabra en la posición del índice obtenido\n",
+    "                    palabra_oculta_lista[i] = letra_usuario \n",
+    "            # Paso la palabra oculta lista a string para mostrarla al usuario -> join y usamos como delimitador \" \", porque quiero una cadena de texto con separación entre los guiones\n",
+    "            palabra_oculta = \" \".join(palabra_oculta_lista)\n",
+    "            print(f\"Palabra oculta es: {palabra_oculta}\")\n",
+    "            if \"_\" not in palabra_oculta:\n",
+    "                print(f\"Felicidades, has adivinado la palabra oculta {palabra_oculta} 🎉\")\n",
+    "                break\n",
+    "        else:\n",
+    "            vidas_usuario -= 1\n",
+    "            print(f\"La letra {letra_usuario} no está en la palabra secreta 🙁. Te quedan {vidas_usuario} vidas\")\n",
+    "            if vidas_usuario == 0:\n",
+    "                print(f\"Has agotado todas tus vidas, el juego ha terminado 💀. La palabra secreta era {palabra_secreta_aleatoria}\")\n",
+    "                break"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -422,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
