--- a/juego_geografia.ipynb
+++ b/juego_geografia.ipynb
@@ -33,6 +33,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# JUEGO SIN EL EXTRA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -99,13 +106,9 @@
     }
    ],
    "source": [
-    "#Diccionario con preguntas y respuestas (8 preguntas) #DUDA: condiciones ok? 8 preguntas, 5 respuestas, 3 fallos\n",
-    "\n",
-    "# Importar la librería random\n",
     "import random\n",
     "\n",
-    "# Crear el diccionario con las preguntas y respuestas\n",
-    "\n",
+    "# Diccionario con preguntas y respuestas\n",
     "preguntas_respuestas = {\n",
     "    '¿Cuál es la capital de Francia?': 'paris',\n",
     "    '¿Cuál es el continente más grande?': 'asia',\n",
@@ -118,92 +121,145 @@
     "    '¿Qué país es conocido como la tierra de los canguros?': 'australia'\n",
     "}\n",
     "\n",
-    "#PDTE: Borrar este dicc después de las pruebas\n",
-    "\"\"\"\n",
-    "preguntas_respuestas = {\n",
-    "    \"Cuál es la capital de Castilla-La Mancha?\": \"toledo\",\n",
-    "    \"Cuál es el desierto más grande del mundo?\": \"laantartida\",\n",
-    "    \"Cuál es el país con más población del mundo?\": \"india\"\n",
-    "}\n",
-    "\"\"\"\n",
-    "\n",
-    "#PDTE: Borrar este print \n",
-    "print(f\"El diccionario generado es {preguntas_respuestas}\")\n",
-    "\n",
-    "# Definir variables \n",
-    "intentos_pregunta = 0 #PDTE: Como extra: tenemos posibilidad de fallar 3 veces pero solo suma 1 fallo si llego al intento nº3 por pregunta\n",
+    "# Variables \n",
     "conteo_preguntas = 0\n",
     "respuestas_correctas = 0\n",
     "respuestas_incorrectas = 0\n",
     "\n",
     "# Pasamos el diccionario a lista porque el método random choice se aplica a listas\n",
     "preguntas_respuestas_lista = list(preguntas_respuestas)\n",
-    "#PDTE: Borrar este print \n",
-    "print(f\"La lista generada del dict es: {preguntas_respuestas_lista}\")\n",
-    "\n",
-    "# Usamos condición While True porque el juego se lanzará hasta que se cumplan las condiciones indicadas\n",
     "# Cuando las condiciones se cumplan, se parará el juego con un break\n",
     "while True: \n",
     "    # Generamos una pregunta aleatoria de la lista\n",
     "    pregunta_random = random.choice(preguntas_respuestas_lista)\n",
-    "    #PDTE: Borrar este print \n",
-    "    print(f\"pregunta random es {pregunta_random}\")\n",
-    "    \n",
     "    # Llevamos la cuenta de las preguntas hechas, independientemente de si son correctas o no \n",
     "    conteo_preguntas += 1\n",
     "    print(f\"Esta es la pregunta número {conteo_preguntas}\")\n",
-    "    \n",
     "    # Mostramos pregunta al usuario y recogemos respuesta\n",
-    "    respuesta_usuario = input(f\"Responda la siguiente pregunta {pregunta_random}\")\n",
+    "    respuesta_usuario = input(f\"Responda la siguiente pregunta: {pregunta_random}\")\n",
     "    # Protegemos el formato de la respuesta del usuario para que coincida con la respuesta del diccionario\n",
-    "    # Con split eliminamos espacios, con join unificamos en un solo string y con lower lo pasamos todo a minúscula\n",
-    "    # PDTE: proteger los acentos -> para el final, es complejo -> importar libreria unicode\n",
-    "    respuesta_usuario = \"\".join(respuesta_usuario.split()).lower()\n",
-    "    #PDTE: Borrar este print \n",
-    "    print(f\"La respuesta del usuario es: {respuesta_usuario}\")\n",
-    " \n",
+    "    respuesta_usuario = \"\".join(respuesta_usuario.split()).lower() \n",
     "    # Comparamos la respuesta del usuario con el value correspondiente a la pregunta (key) del diccionario\n",
-    "    # La variable Pregunta_random recoge la key del diccionario \n",
-    "    # La variable respuesta_usuario recoge el value del diccionario\n",
-    "    # preguntas_respuestas[pregunta_random] nos da el value de la pregunta hecha al usuario -> lo comparamos con la respuesta dada para ver si es correcta\n",
     "    if respuesta_usuario == preguntas_respuestas[pregunta_random]:\n",
-    "        #PDTE: Borrar este print \n",
-    "        print(f\"respuesta_usuario es {respuesta_usuario} y preguntas_respuestas[pregunta_random] es {preguntas_respuestas[pregunta_random]}\")\n",
     "        respuestas_correctas += 1\n",
-    "        print(f\"Has acertado! Llevas un total de {respuestas_correctas} respuestas correctas\")\n",
-    "        #PDTE: Actualizar a respuestas_correctas == 5\n",
+    "        print(f\"Has acertado! Llevas un total de {respuestas_correctas} respuestas correctas 🤩\")\n",
     "        if respuestas_correctas == 5:\n",
-    "            # PDTE: Se puede cambiar print y break por un return\n",
     "            print(f\"Enhorabuena, has ganado el juego! 🎉\")\n",
     "            break\n",
     "        else:\n",
     "            print(f\"A por la siguiente pregunta!🤓\")\n",
     "            # Si adivina una pregunta y el juego sigue, sacar esa pregunta de la lista para que no se repita\n",
-    "            # Usaré remove para eliminar la pregunta de la lista porque remove elimina la primera aparición del valor concreto y en este caso solo aparece una vez\n",
-    "            # Podemos usar Pregunta_random que es cada uno de los elementos de la lista \"preguntas_respuestas_lista\" que es de donde salen las preguntas que lanza la máquina\n",
-    "            # PDTE: Borrar estos print\n",
-    "            print(f\"La lista de posibles preguntas ANTES de actualizarse es: {preguntas_respuestas_lista}\")\n",
     "            preguntas_respuestas_lista.remove(pregunta_random)\n",
-    "            # PDTE: Borrar estos print\n",
-    "            print(f\"La pregunta a borrar es: {pregunta_random}\")\n",
-    "            # PDTE: Borrar estos print\n",
-    "            print(f\"La lista de posibles preguntas DESPUES de actualizarse es: {preguntas_respuestas_lista}\")\n",
     "    else:\n",
     "        respuestas_incorrectas += 1\n",
-    "        print(f\"La respuesta no es correcta 🙁 Has fallado un total de {respuestas_incorrectas} veces\")\n",
-    "        #PDTE: Actualizar a respuestas_correctas == 5\n",
+    "        print(f\"La respuesta no es correcta 🙁 Has fallado un total de {respuestas_incorrectas} veces.\")\n",
     "        if respuestas_incorrectas == 3:\n",
-    "            print(f\"El juego ha terminado... 😓\")\n",
-    "            break\n",
-    "        else:\n",
-    "            print(\"Pero no pasa, vuelve a intentarlo! 💪\") # PDTE: Extra: tiene que volver a lanzar la misma pregunta si falla, darle 3 intentos, si falla los 3, le lanzas otra pregunta y le quitas 1 vida\n",
-    "                                                            # Duda: si fallo 3 veces la misma pregunta la elimino como posible pregunta a futuro?\n",
-    "  \n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n"
+    "            print(f\"El juego ha terminado...😢\")\n",
+    "            break"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# JUEGO CON EXTRA\n",
+    "2 INTENTOS POR PREGUNTA ANTES DE SUMAR 1 AL TOTAL DE RESPUESTAS INCORRECTAS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esta es la pregunta número 1\n",
+      "Respuesta incorrecta. Te queda 1 intento. ¡Vuelve a intentarlo! 💪\n",
+      "Has fallado la misma pregunta dos veces. Tienes 1 respuestas incorrectas. 🙁\n",
+      "Esta es la pregunta número 2\n",
+      "Respuesta incorrecta. Te queda 1 intento. ¡Vuelve a intentarlo! 💪\n",
+      "Has fallado la misma pregunta dos veces. Tienes 2 respuestas incorrectas. 🙁\n",
+      "Esta es la pregunta número 3\n",
+      "Respuesta incorrecta. Te queda 1 intento. ¡Vuelve a intentarlo! 💪\n",
+      "Has fallado la misma pregunta dos veces. Tienes 3 respuestas incorrectas. 🙁\n",
+      "Has alcanzado el máximo de respuestas incorrectas. El juego ha terminado... 😓\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Diccionario con preguntas y respuestas\n",
+    "preguntas_respuestas = {\n",
+    "    '¿Cuál es la capital de Francia?': 'paris',\n",
+    "    '¿Cuál es el continente más grande?': 'asia',\n",
+    "    '¿Qué país tiene la mayor población del mundo?': 'india',\n",
+    "    '¿Cuál es el río más largo del mundo?': 'amazonas',\n",
+    "    '¿En qué país se encuentra la Torre Eiffel?': 'francia',\n",
+    "    '¿Cuál es la capital de Japón?': 'tokio',\n",
+    "    '¿Cuál es el desierto caliente más grande del mundo?': 'sahara',\n",
+    "    '¿Cuál es la capital de Argentina?': 'buenosaires',\n",
+    "    '¿Qué país es conocido como la tierra de los canguros?': 'australia'\n",
+    "}\n",
+    "\n",
+    "# Variables\n",
+    "intentos_pregunta = 2  # Intentos permitidos por cada pregunta\n",
+    "conteo_preguntas = 0\n",
+    "respuestas_correctas = 0\n",
+    "respuestas_incorrectas = 0\n",
+    "\n",
+    "# Pasamos el diccionario a lista porque el método random choice se aplica a listas\n",
+    "preguntas_respuestas_lista = list(preguntas_respuestas)\n",
+    "# Cuando las condiciones se cumplan, se parará el juego con un break\n",
+    "while True:\n",
+    "    # Hacemos esta comprobación para parar el bucle principal cuando hemos salido del bucle interno si es necesario\n",
+    "    if respuestas_incorrectas == 3 or respuestas_correctas == 5:\n",
+    "        break\n",
+    "    # Generamos una pregunta aleatoria de la lista\n",
+    "    pregunta_random = random.choice(preguntas_respuestas_lista)\n",
+    "    # Llevamos la cuenta de las preguntas hechas, independientemente de si son correctas o no \n",
+    "    conteo_preguntas += 1\n",
+    "    print(f\"Esta es la pregunta número {conteo_preguntas}\")\n",
+    "    # Reiniciar intentos permitidos para la nueva pregunta\n",
+    "    intentos_pregunta = 2\n",
+    "    # Bucle para intentar responder la misma pregunta hasta agotar los intentos\n",
+    "    while intentos_pregunta > 0:\n",
+    "        # Mostramos pregunta al usuario y recogemos respuesta\n",
+    "        respuesta_usuario = input(f\"Responda la siguiente pregunta: {pregunta_random}\")\n",
+    "        # Protegemos el formato de la respuesta del usuario para que coincida con la respuesta del diccionario\n",
+    "        respuesta_usuario = \"\".join(respuesta_usuario.split()).lower()\n",
+    "        # Comparamos la respuesta del usuario con el valor correspondiente a la pregunta (key) del diccionario\n",
+    "        if respuesta_usuario == preguntas_respuestas[pregunta_random]:\n",
+    "            respuestas_correctas += 1\n",
+    "            print(f\"¡Has acertado! Llevas un total de {respuestas_correctas} respuestas correctas 🤩\")\n",
+    "            if respuestas_correctas == 5:\n",
+    "                print(f\"Enhorabuena, has ganado el juego! 🎉\")\n",
+    "                break # Sale del bucle interno\n",
+    "            else:\n",
+    "                print(f\"A por la siguiente pregunta! 🤓\")\n",
+    "                # Si adivina una pregunta y el juego sigue, sacamos esa pregunta de la lista para que no se repita\n",
+    "                preguntas_respuestas_lista.remove(pregunta_random)\n",
+    "                break  # Sale del bucle interno y pasa a una nueva pregunta\n",
+    "        else:\n",
+    "            intentos_pregunta -= 1\n",
+    "            if intentos_pregunta > 0:\n",
+    "                print(f\"Respuesta incorrecta. Te queda {intentos_pregunta} intento. ¡Vuelve a intentarlo! 💪\")\n",
+    "            else:\n",
+    "                respuestas_incorrectas += 1\n",
+    "                print(f\"Has fallado la misma pregunta dos veces. Tienes {respuestas_incorrectas} respuestas incorrectas. 🙁\")\n",
+    "                if respuestas_incorrectas == 3:\n",
+    "                    print(f\"Has alcanzado el máximo de respuestas incorrectas. El juego ha terminado... 😓\")\n",
+    "                    break  # Salimos del bucle de intentos y pasamos a la siguiente pregunta\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
